# OxideLauncher

./: .gitignore  README.md  TAURI_ARCHITECTURE.md  TESTING.md  package-lock.json
app/: Cargo.toml  build.rs  tauri.conf.json
app/capabilities/: default.json
app/src/: commands.rs  main.rs
app/src/app/: mod.rs  state.rs
app/src/commands/: accounts.rs  config.rs  instances.rs  java.rs  mod.rs  modpacks.rs  mods.rs  news.rs  resources.rs  rustwiz.rs  screenshots.rs  shortcuts.rs  state.rs  versions.rs  worlds.rs
app/src/commands/instances/: blocked_mods.rs  components.rs  crud.rs  folders.rs  jarmods.rs  launch.rs  mod.rs  settings.rs  transfer.rs
app/src/commands/mods/: download.rs  listing.rs  mod.rs  search.rs  types.rs
app/src/commands/resources/: download.rs  listing.rs  mod.rs  search.rs  types.rs
app/src/core/: config.rs  download.rs  error.rs  files.rs  java.rs  launch.rs  logging.rs  mod.rs
app/src/core/accounts/: list.rs  microsoft.rs  mod.rs  offline.rs  skins.rs  types.rs
app/src/core/instance/: components.rs  create.rs  export.rs  import.rs  list.rs  mod.rs  setup.rs  transfer.rs  types.rs
app/src/core/java/: checker.rs  detection.rs  download.rs  install.rs  metadata.rs  mod.rs  version.rs
app/src/core/launch/: mod.rs  step.rs  task.rs
app/src/core/meta/: client.rs  mod.rs  types.rs
app/src/core/minecraft/: assets.rs  libraries.rs  mod.rs  version.rs  world.rs
app/src/core/modloaders/: fabric.rs  forge.rs  installer.rs  liteloader.rs  mod.rs  neoforge.rs  processor.rs  profile.rs  quilt.rs
app/src/core/modplatform/: curseforge.rs  mod.rs  mod_parser.rs  modrinth.rs  types.rs
app/src/core/rustwiz/: export.rs  mod.rs  parser.rs  types.rs  update_check.rs
app/src/ui/: icons.rs  mod.rs  styles.rs  theme.rs
app/src/ui/components/: mod.rs  modal.rs  progress_bar.rs  (+1 more)
app/wrappers/oxide-launch/: .gitignore  README.md  build.bat  build.gradle  build.sh  settings.gradle
(+132 files in other folders)
